<resources>
    <string name="app_name">PokeCoord App</string>
    <string name="adUnitId">ca-app-pub-8924053852397204~1767789962</string>
    <string name="app_version">Version %s</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="menu_admin">Administrator</string>
    <string name="menu_language">Language</string>
    <string name="menu_home">Home</string>
    <string name="menu_nests">Pokemon nests</string>
    <string name="menu_farming">Farming zones</string>
    <string name="menu_shiny_rates">Shiny rates</string>
    <string name="menu_community">Community day</string>
    <string name="menu_hours">Spotlight hour</string>
    <string name="menu_news">News</string>

    <string name="url_home">https://app.pokecoord.com/</string>
    <string name="url_nests">https://app.pokecoord.com/pokemon-nests/ </string>
    <string name="url_farming">https://app.pokecoord.com/pokemon-go-locations/ </string>
    <string name="url_shiny_rates">https://app.pokecoord.com/pokemon-shiny-rates/ </string>
    <string name="url_community">https://app.pokecoord.com/pokemon-go-community-day/ </string>
    <string name="url_hours">https://app.pokecoord.com/pokemon-spotlight-hour/ </string>
    <string name="url_news">https://app.pokecoord.com/category/pokemon-go-news/ </string>

    <string name="contact_us">Contact us</string>
    <string name="powered_by">Powered by Ciencia Geek</string>

    <string name="popup_admin_title">Login Administrator</string>
    <string name="popup_admin_description">Hey! This section is only for Admins of the App.</string>
    <string name="popup_admin_accept">Accept</string>
    <string name="popup_admin_cancel">Cancel</string>
    <string name="popup_admin_username">Username</string>
    <string name="popup_admin_password">Password</string>
    <string name="popup_admin_not_found">Invalid username and/or password. \nPlease try again.</string>

    <string name="popup_language_title">Language options</string>
    <string name="popup_language_select">Select an option</string>
    <string name="popup_language_description">Description here</string>
    <string name="popup_language_english">English</string>
    <string name="popup_language_spanish">Spanish</string>
    <string name="popup_language_wait">Wait a moment…</string>

    <string name="notification_header">Send a notification</string>
    <string name="notification_type">Notification type</string>
    <string name="notification_language">Notification language</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_title_desc_esp">NUEVO VIDEO EN CIENCIA GEEK</string>
    <string name="notification_title_desc_eng">WE HAVE A NEW VIDEO IN POKECOORD</string>
    <string name="notification_title_edit">Edit title</string>
    <string name="notification_message">Notification message</string>
    <string name="notification_message_desc_esp">Ven a verlo! 😎</string>
    <string name="notification_message_desc_eng">Come to watch it! 😎</string>
    <string name="notification_edit_message">Edit message</string>
    <string name="notification_url_to_open">Url to open (if necessary)</string>
    <string name="notification_url_to_open_desc">Insert the Url here</string>
    <string name="notification_send_now">Send notification now</string>
    <string name="notification_sent_success">Notification in %s sent successfully</string>
    <string name="notification_sent_fail">Error sending notification. Try again.</string>

    <string name="url_twitter">https://twitter.com/pokecoord</string>
    <string name="url_facebook">https://www.facebook.com/pokecoord/</string>
    <string name="url_youtube">https://youtube.com/channel/UCkkiDorjnq6HleT-oW467rg</string>
    <string name="url_cien">https://play.google.com/store/apps/details?id=com.herreralemus.iv100.client</string>
    
</resources>