<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.cardview.widget.CardView
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_gravity="center"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="8dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/popup_admin_title"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/popup_admin_description"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/popup_admin_username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/popup_admin_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="11dp"
                android:layout_weight="1"
                android:text="@string/popup_admin_accept" />

            <Button
                android:id="@+id/alertDialogPositiveButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/popup_admin_not_found"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
</layout>

