<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/notification_header"
                android:textSize="28sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="@string/notification_type"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="18dp">

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/language_outline"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/arrow_down_float"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/txtLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="@string/notification_language"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="18dp">

                <Spinner
                    android:id="@+id/spinnerLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/language_outline"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/arrow_down_float"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="@string/notification_title"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etNotificationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/language_outline"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/notification_title_edit"
                android:inputType="textMultiLine|textPersonName"
                android:lines="2"
                android:maxLines="3"
                android:padding="12dp" />

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="@string/notification_message"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etNotificationMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/language_outline"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/notification_edit_message"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textPersonName"
                android:lines="4"
                android:maxLines="4"
                android:padding="12dp" />

            <TextView
                android:id="@+id/txtUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:includeFontPadding="false"
                android:text="@string/notification_url_to_open"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etNotificationUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/language_outline"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/notification_url_to_open_desc"
                android:inputType="textMultiLine|textUri"
                android:lines="1"
                android:maxLines="1"
                android:padding="12dp" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/main_orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:text="@string/notification_send_now"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>